// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders the checked style 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c5:checked {
  box-shadow: inset 0 0 0 0.3125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c5:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      checked=""
      class="c4 c5"
      type="radio"
    />
  </div>
</label>
`;

exports[`Checkbox renders the correct text vertical align version 1`] = `
.c6 {
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.4;
  margin: 0;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c5:checked {
  box-shadow: inset 0 0 0 0.3125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c5:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.1875rem;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4 c5"
      type="radio"
    />
  </div>
  <span
    class="c6"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox renders the disabled checked style 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c4::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c4:checked {
  box-shadow: inset 0 0 0 0.3125rem #096BDB;
}

.c4:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:active {
  background-color: #F1F2F4;
}

.c4:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #9CA7B4;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: not-allowed;
}

.c0:hover .c2:active {
  background-color: transparent;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      checked=""
      class="c4"
      disabled=""
      type="radio"
    />
  </div>
</label>
`;

exports[`Checkbox renders the disabled style 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c4::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c4:checked {
  box-shadow: inset 0 0 0 0.3125rem #096BDB;
}

.c4:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:active {
  background-color: #F1F2F4;
}

.c4:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #9CA7B4;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: not-allowed;
}

.c0:hover .c2:active {
  background-color: transparent;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4"
      disabled=""
      type="radio"
    />
  </div>
</label>
`;

exports[`Checkbox renders the error checked style 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c4::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c4:checked {
  box-shadow: inset 0 0 0 0.3125rem #FF5E05;
}

.c4:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:active {
  background-color: #F1F2F4;
}

.c4:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #9CA7B4;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: not-allowed;
}

.c0:hover .c2:active {
  background-color: transparent;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4"
      disabled=""
      type="radio"
    />
  </div>
</label>
`;

exports[`Checkbox renders the error style 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c5:checked {
  box-shadow: inset 0 0 0 0.3125rem #FF5E05;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c5:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #FFF6F1;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
  background-color: #FFFFFF;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4 c5"
      type="radio"
    />
  </div>
</label>
`;

exports[`Checkbox renders with default props 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0 0.5rem 0 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 50%;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  width: 1rem;
  height: 1rem;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms;
}

.c5:checked {
  box-shadow: inset 0 0 0 0.3125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c5:disabled:checked {
  box-shadow: inset 0 0 0 0.3125rem #F1F2F4;
  background-color: #FFFFFF;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  width: 1.5rem;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4 c5"
      type="radio"
    />
  </div>
</label>
`;
